se agregó botón y formulario

--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <h1>TITULO Nuevo modificado</h1>
+
+
+    <form action="#" method="get">
+
+      <input type="button" value="Enviar"/>
+
+    </form>
 </body>
 </html>
