--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
     <form action="#" method="get">
-
+          <input type="text" name="firstName" id="firstName"> 
       <input type="button" value="Enviar"/>
 
     </form>
