--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
           <input type="text" name="firstName" id="firstName"> 
       <input type="button" value="Enviar"/>
 
+      <h2>Ahora cambio desde user-2</h2>
+
     </form>
 </body>
 </html>
