segundo cambio seguido de user2

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <h2>Ahora otro tercer cambio desde user-1</h2>
       <h2>Perfect, hora desde el usuario3</h2>
       <h2>Ahora cambio desde user-2</h2>
+      <h2>Ahora cambio desde user-2</h2>
     </form>
 </body>
 </html>
